Implemented unit test
